# timetabling

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: connection.rs  main.rs  up_msg_handler.rs  user.rs
backend/src/connection/: school.rs
backend/src/up_msg_handler/: auth.rs  classes.rs  lectures.rs  school.rs  teachers.rs  timetables.rs
frontend/: Cargo.toml
frontend/languages/: en-US.ftl  tr-TR.ftl
frontend/src/: app.rs  connection.rs  fonts.rs  header.rs  main.rs  router.rs
frontend/src/app/: login.rs  timetables.rs  view.rs
frontend/src/app/timetables/: add_act.rs  class.rs  classes.rs  generate.rs  generator.rs  prints.rs  teacher.rs  teachers.rs
frontend/src/app/timetables/class/: activities.rs  limitations.rs
frontend/src/app/timetables/prints/: all_classes.rs  all_teachers.rs  classes.rs  teachers.rs
frontend/src/app/timetables/teacher/: activities.rs  limitations.rs
frontend/src/elements/: buttons.rs
genpdf-rs/: Cargo.toml
genpdf-rs/src/: error.rs  render.rs
genpdf-rs/tests/: pdf.rs
printpdf/: Cargo.toml
printpdf/src/: color.rs  ctm.rs  image.rs  pdf_layer.rs  scale.rs
shared/: Cargo.toml
shared/src/: lib.rs  msgs.rs
shared/src/msgs/: activities.rs  classes.rs  lectures.rs  schools.rs  teachers.rs  timetables.rs  users.rs
