[package]
name = "frontend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
fluent = {version = "0.16.0", features =["fluent-pseudo"]}
serde = {version = "1.0.147", features = ["derive"]}
unic-langid = {version = "0.9.1", features = ["unic-langid-macros"]}
zoon.workspace = true
shared = { path = "../shared", features = ["frontend"] }
genpdf = { path = "../genpdf-rs"}
web-sys = { version = "*", features = ["EventSource", "EventTarget", "FileReader", "Navigator", "Blob", "Window", "BlobPropertyBag"] }
js-sys = "*"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.3"